# workmux

./: CHANGELOG.md  Cargo.toml  ISSUE.md  PULL_REQUEST.md  README.md  justfile
.codex/hooks/: workmux-status.json
.opencode/plugin/: workmux-status.ts
docker/: Dockerfile.base
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: agents.md  claude-code.md  configuration.md  index.md  skills.md  status-tracking.md
docs/guide/dashboard/: index.md  sidebar.md
docs/guide/sandbox/: container.md  features.md  index.md  lima.md
docs/reference/commands/: add.md  index.md  list.md  open.md  resurrect.md  sandbox.md  sidebar.md  sync-files.md  update.md
skills/coordinator/: SKILL.md
skills/workmux/: SKILL.md
src/: agent_display.rs  cli.rs  config.rs  github.rs  llm.rs  main.rs  skills.rs  tips.rs  util.rs
src/agent_setup/: codex.rs  mod.rs
src/command/: add.rs  args.rs  close.rs  last_done.rs  list.rs  mod.rs  open.rs  path.rs  remove.rs  resurrect.rs  sandbox.rs  sandbox_run.rs  send.rs  setup.rs  sync_files.rs  update.rs
src/command/dashboard/: actions.rs  agent.rs  (+4 more)
src/git/: branch.rs  config_lock.rs  mod.rs  status.rs
src/multiplexer/: agent.rs  kitty.rs  mod.rs  tmux.rs  types.rs  util.rs  wezterm.rs  zellij.rs
src/sandbox/: container.rs  freshness.rs
src/state/: mod.rs  store.rs  types.rs
src/ui/: mod.rs  theme.rs
src/workflow/: create.rs  file_ops.rs  list.rs  merge.rs  mod.rs  open.rs  remove.rs  resurrect.rs  setup.rs  types.rs
tests/: conftest.py  test_agent_state.py  test_session_navigation.py  test_workmux_capture.py  test_workmux_close.py  test_workmux_list.py  test_workmux_open.py  test_workmux_run.py  test_workmux_send.py  test_workmux_status.py  test_workmux_wait.py
tests/test_workmux_add/: test_agents.py  test_config.py  test_hooks.py  test_layouts.py  test_multi_shell.py  test_named_agents.py  test_shell_init.py
(+22 files in other folders)
