[package]
name = "workmux"
version = "0.1.124"
edition = "2024"
authors = ["workmux contributors"]
description = "An opinionated workflow tool that orchestrates git worktrees and tmux"
license = "MIT"
documentation = "https://github.com/raine/workmux#readme"
homepage = "https://github.com/raine/workmux"
repository = "https://github.com/raine/workmux"
include = [
    "/src/**/*",
    "/docker/**/*",
    "/.claude-plugin/**/*",
    "/.github/hooks/**/*",
    "/.opencode/plugin/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
pathdiff = "0.2"
percent-encoding = "2.3"
home = "0.5"
fs_extra = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
edit = "0.1"
which = "8.0"
minijinja = "2.0"
tabled = { version = "0.20", features = ["ansi"] }
git-url-parse = "0.6.0"
slug = "0.1"
indicatif = "0.18"
console = "0.16"
regex = "1"
pulldown-cmark = { version = "0.13", default-features = false }
textwrap = "0.16"
ratatui = "0.30"
crossterm = "0.29"
ansi-to-tui = "8"
notify-rust = "4"
libc = "0.2"
ctrlc = "3.4"
base64 = "0.22"
nix = { version = "0.31.1", features = ["fs"] }
strip-ansi-escapes = "0.2"
tempfile = "3.14"
wait-timeout = "0.2"
getrandom = "0.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[dev-dependencies]

[profile.release]
strip = true       # Strip debug symbols
lto = true         # Link Time Optimization for smaller binaries
codegen-units = 1  # Maximize optimization
